fix: aligning label to left

--- a/frontend/src/pages/Register/styles.css
+++ b/frontend/src/pages/Register/styles.css
@@ -68,6 +68,10 @@
     width: 600px;
 }
 
+.registerForm > label{
+    align-self: flex-start;
+}
+
 .registerForm input {
     background: #F0F0F5;
 }
